# licitaciones

./: .dockerignore  .env  .env.example  .gitignore  .json  .txt  DTOlucita2732-49-LE25.json  Dockerfile  README.md  licitacion 2732-49-LE25.json  licitacion copy.json  licitacion.json  licitaciones_list 1-1.json  licitaciones_list 2-3.json  licitaciones_list activas.json  licitaciones_list adjudicada.json  licitaciones_list cerrada.json  licitaciones_list desiertas.json  licitaciones_list publicada.json  licitaciones_list revocadas.json  licitaciones_list todos.json  listLicitacionesCode.json  main.py  publicada4486-5-LE26.json  pyproject.toml  reindex_in_place.py  requirements.txt  search.md  update_solr_status.py  verify_delta_sync.py  verify_models.py
app/: config.py  dependencies.py  routes.py
app/api/: admin.py  mercadopublico.py  subscription_concepts.py  subscriptions.py  tiers.py  users.py
app/application/: active_ingestion_service.py  daily_ingestion_runner.py  ingestion_service.py  subscription_concept_service.py  subscription_service.py  tier_service.py  transformer_service.py  user_service.py
app/domain/: models.py  nocodb_schemas.py  ports.py  schemas.py  solr_models.py
app/infrastructure/mercadopublico/: client.py
app/infrastructure/nocodb/: __init__.py  client.py
app/infrastructure/solr/: managed-schema.xml  repository.py
